Renamed version to be 1.10.0 and updated Dockerfiles to be production ready