@@ -1,15 +1,50 @@
-FROM gizmotronic/oracle-java:java8
+FROM openjdk:8u181-slim as builder
 
-RUN apt-get update  && \
-    apt-get install -y git curl zsh
+# ARGS
+ARG ETHEREUMJ_MAIN_CLASS='io.enkrypt.kafka.EthereumKafkaStarter'
 
-ENV SHELL /bin/zsh
+# Install deps
+RUN apt update && \
+  apt install -y wget git && \
+  apt-get clean && \
+  apt-get autoremove
 
-RUN mkdir /ethereumj
-WORKDIR /ethereumj
+# Create workdir
+RUN mkdir /tmp/ethereumj
+WORKDIR /tmp/ethereumj
 
-COPY . /ethereumj
+# Copy src
+COPY . /tmp/ethereumj
 
-RUN ./gradlew --no-daemon build -x test
+# Download dumb-init
+RUN wget -O /dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.2/dumb-init_1.2.2_amd64
 
-CMD "./gradlew --no-daemon run"
+# Build Ethereumj
+RUN /tmp/ethereumj/gradlew --no-daemon assemble -PmainClass=${ETHEREUMJ_MAIN_CLASS}
+
+FROM openjdk:8u181-jre-slim
+
+ARG ETHEREUMJ_VERSION='1.10.0-SNAPSHOT'
+ARG DEFAULT_JVM_ARGS='-server -Xss2m -Xmx2G -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseG1GC -XX:-OmitStackTraceInFastThrow'
+
+ENV JAVA_OPTS=${DEFAULT_JVM_ARGS}
+
+# Copy to new image
+COPY --from=builder /tmp/ethereumj/ethereumj-core/build/distributions/ethereumj-core-${ETHEREUMJ_VERSION}.tar /
+COPY --from=builder /dumb-init /usr/bin/dumb-init
+
+# Prepare binaries
+RUN tar -xvf ethereumj-core-${ETHEREUMJ_VERSION}.tar && \
+  mv /ethereumj-core-${ETHEREUMJ_VERSION} /usr/bin/ethereumj && \
+  rm -rf /ethereumj-core-${ETHEREUMJ_VERSION}.tar && \
+  chmod +x /usr/bin/dumb-init && \
+  chmod +x /usr/bin/ethereumj/bin/ethereumj-core
+
+# Ports
+EXPOSE 30303
+
+# Define entry
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+
+# Define cmd
+CMD ["/usr/bin/ethereumj/bin/ethereumj-core"]
